# Lab1

./: CMakeLists.txt  Coordinats.cpp  Coordinats.h  Line.cpp  Line.h  LineSettings.cpp  LineSettings.h  Manager.cpp  Manager.h  Symbol.cpp  Symbol.h  main.cpp
